stopped jumping on mobile

--- a/widget.css
+++ b/widget.css
@@ -1,3 +1,12 @@
+body {
+	margin: 0;
+	min-height: 100vh;
+}
+
+main {
+
+}
+
 .master-container {
     display: flex;
     flex-direction: column;
@@ -10,7 +19,7 @@
 h1 {
     text-align: center;
     font-size: 2rem;
-    margin: 0 0 0 auto;
+    margin: 45px 0 0 auto;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
     cursor: default;
@@ -23,10 +32,15 @@ h1 {
     font-family: 'Lato', sans-serif;
     font-weight: 100;
     cursor: default;
+    /*text-shadow: -1px 0 magenta, 0 1px magenta, 1px 0 red, 0 -1px magenta;*/
 }
 
 .six-digits {
     margin: 30px 5px 0 auto;
+}
+
+.seven-digits {
+
 }
 
 #menu {
@@ -50,31 +64,37 @@ h1 {
 }
 
 #eos {
+    /*margin-left: 13px;*/
     margin-right: 2.5px;
     background-color: steelblue;
 }
-#eos:hover { background-color: #1f86db; }
 
+#eos:hover { background-color: #1f86db; }
 
 #btc {
     margin-right: auto;
     background-color: orange;
 }
+
 #btc:hover { background-color: #ffb916; }
 
+#eur {
+    /*margin-right: 14px; /*12px was set before*/
+    margin-left: 2px;
+    background-color: #000099;
+    color: #FEDD00;
+}
+
+#eur:hover { background-color: #0000cc; color: yellow; }
 
 #usd { background-color: #85bb65; }
 #usd:hover { background-color: #7dd24b; }
 
 
-#eur {
-    margin-left: 2px;
-    background-color: #000099;
-    color: #FEDD00;
-}
-#eur:hover { background-color: #0000cc; color: yellow; }
-
-
+/*#scnd {
+    width: 8px;
+    background-color: white;
+}*/
 
 #chart-container {
     max-width: 1477px;
@@ -83,17 +103,22 @@ h1 {
     margin: 0 auto;
 }
 
-#chart-container-img {
-    max-width: 100%;
-    max-height: 100%;
-    opacity: 0;
-    display: none;
+/*canvas { margin-left: 14px; }*/
+
+.failedAPI {
+	height: 293px;
+    background-color: rgba(0, 0, 0, 0.02);
 }
 
-#failedAPI {
-	height: fit-content;
-    width: fit-content;
-    background-color: rgba(0, 0, 0, 0.02);
+h2 {
+    text-align: center;
+    font-size: 2rem;
+}
+
+h2 span {
+    background-color: pink;
+    opacity: .5;
+    cursor: text !important;
 }
 
 #different-master-container {
@@ -102,6 +127,10 @@ h1 {
     width: 585px;
     margin: auto;
 }
+
+#frst { width: 14px; background-color: white; }
+#scnd { width: 13.5px; background-color: white; }
+
 
 form {
     margin-top: 13px;
@@ -164,11 +193,11 @@ input ::-moz-focus-inner {
 /*CSS Rules for long crypto price tags*/
 /*six digits*/
 .six-digit-h1 {
-    margin: 56px 5px 0 auto;
+    margin: 101px 5px 0 auto;
 }
 
 h1 .six-digit-spans {
-    font-size: 6.5rem;
+    font-size: 6.6rem;
 }
 
 /*seven digits*/
@@ -184,6 +213,7 @@ h1 .seven-digit-spans {
     body {
       width: 90%;
       margin: 0 auto 0 auto;
+	  min-height: 100vh;
     }
 
     .master-container {
@@ -198,14 +228,19 @@ h1 .seven-digit-spans {
     #h1 .six-digit-spans { font-size: 16.7vw; } /*for when crypto price is 6 digits long*/
     #h1 .seven-digit-spans { font-size: 14.6vw; } /*7 digits long*/
     body .master-container, body #chart-container, body #different-master-container, body #menu { width: 100%; }
-    .six-digit-h1 { margin-right: 8px; } /*for when crypto price is 6 digits long*/
+    /*#eos { margin-left: 8px; }*/
+    /*#eur { margin-right: 13px; }*/
+    .six-digit-h1 { margin-right: 8px; margin-top: 20%; } /*for when crypto price is 6 digits long*/
+	h1 { margin-top: 6%; }
     .seven-digit-h1 { margin: 30px 8px 0 auto; } /*7 digits long*/
     #frst-input { width: 85%; }
 }
 
 @media(min-width: 220px) and (max-width: 430px) {
+    /*h1 { margin-right: 6px; }*/
     .six-digit-h1 { margin-right: 8px; } /*for when crypto price is 6 digits long*/
     .seven-digit-h1 { margin-right: 8px; } /*7 digits long*/
+    /*#eur { margin-right: 12px; }*/
     #menu { margin-top: 6px; }
     #menu .tabs { padding-top: 6px; width: 45px; font-size: .7rem; }
     #menu { height: 24px; }
